fixed a bug were on a galaxy fold the images were slightly stretched, also fixed a bug were the image height wasn't set on an ipad causing the layout of the gallery to look off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ container-map{
     border-color: black;
     border-style: dashed;
     border-width: 3px;
-    background-repeat: no-repeat;
+    background-repeat:no-repeat ;
 
 }
 
@@ -667,6 +667,21 @@ section div div h2 i {
     text-decoration: none;
 }
 /*media screens---------------------------------------------------------------------------------- */
+@media screen and (max-width: 768px) {
+       
+    .submit-button {
+        margin:1em 0 0 0;
+    }
+    
+    .heading-one{
+        font-size: 40px;
+    }
+    .gallery-image-1, .gallery-image-2, .gallery-image-3, .gallery-image-4, .gallery-image-5, .gallery-image-6, .gallery-image-7, .gallery-image-8, .gallery-image-9, .gallery-image-10, .gallery-image-11, .gallery-image-12, .gallery-image-13, .gallery-image-14, .gallery-image-15, .gallery-image-16{
+        height:300px;
+    }
+        }
+
+
 
 @media screen and (max-width: 393px) {
        
@@ -702,6 +717,7 @@ section div div h2 i {
 
 .gallery-image-1, .gallery-image-2, .gallery-image-3, .gallery-image-4, .gallery-image-5, .gallery-image-6, .gallery-image-7, .gallery-image-8, .gallery-image-9, .gallery-image-10, .gallery-image-11, .gallery-image-12, .gallery-image-13, .gallery-image-14, .gallery-image-15, .gallery-image-16{
     height:100%;
+
 }
 
 }
